[package]
name = "bugzilla_query"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Access bugs on a remote Bugzilla instance."
readme = "README.md"
documentation = "https://docs.rs/bugzilla_query/"
homepage = "https://github.com/msuchane/bugzilla_query"
repository = "https://github.com/msuchane/bugzilla_query"
keywords = ["bugzilla", "rest"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
restson = "1.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0"
