[package]
name = "bugzilla_query"
authors = ["Marek Suchánek <msuchane@redhat.com>"]
version = "1.0.2"
edition = "2021"
# Check the Rust version using `cargo msrv verify`.
rust-version = "1.58"
license = "Apache-2.0"
description = "Access bugs on a remote Bugzilla instance."
readme = "README.md"
documentation = "https://docs.rs/bugzilla_query/"
homepage = "https://github.com/msuchane/bugzilla_query"
repository = "https://github.com/msuchane/bugzilla_query"
keywords = ["bugzilla", "rest"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Version with a security patch:
chrono = { version = ">=0.4.20", features = ["serde"] }

[dev-dependencies]
tokio = { version = ">=1.24", features = ["full"] }
